xtal config space

--- a/tex/implementation.tex
+++ b/tex/implementation.tex
@@ -5,7 +5,7 @@
 % @license see 'LICENSE' file
 %
 
-\chapter{Path-finding Details and Implementation}
+\chapter{Path-finding Algorithm and Implementation}
 \label{ch:impl}
 
 In this chapter we describe the individual steps of the strategy (see p. \pageref{sec:strategy}) in detail
