--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -114,3 +114,9 @@ At the same time, the idea to automate manual tasks at instruments using algorit
 As part of the current drive towards autonomous experimentation at the ILL, the goal of the present work is the design and implementation of a software tool which enable an automatic path finding for TAS instruments. Automatic path finding is necessary for the instrument to circumvent obstacles in its path. Currently, this task has to be performed by the instrument scientists before each new scan series in a time-consuming fashion. The current approach requires the instrument to be  driven along the programmed scan path, but without measuring and with the neutron beam from the reactor closed. The scientist has to stay in the instrument space and watch the instrument as it moves to every scan position. A manual stop has to be initiated when the instrument would collide with a wall, with itself, or when the rotation of one of the axes would pull out a cable or tube.
 
 In the next chapter, we will introduce the coordinate systems used in crystallography and at TAS instruments, and show how one set of coordinates transforms into the other.
+
+
+
+\section{Summary}
+
+TODO
