--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -387,6 +387,32 @@
 	doi = {10.1007/BF01179076},
 }
 
+
+@article{Hwang2003,
+	title = {A fast path planning by path graph optimization},
+	author = {Hwang, Joo Young and Kim, Jun Song and Lim, Sang Seok and Park, Kyu Ho},
+	journal = {IEEE Transactions on systems, man, and cybernetics-part a: systems and humans},
+	issn = {1558-2426},
+	volume = {33},
+	number = {1},
+	pages = {121-129},
+	year = {2003},
+	doi = {10.1109/TSMCA.2003.812599},
+	publisher = {IEEE},
+}
+
+
+@article{Singal2014,
+	title = {Dijkstra shortest path algorithm using global positioning system},
+	author = {Singal, Pooja and Chhillar, R. S.},
+	journal = {International Journal of Computer Applications},
+	issn = {0975-8887},
+	volume = {101},
+	number = {6},
+	pages = {12-18},
+	year = {2014}
+}
+
 % -----------------------------------------------------------------------------
 
 
@@ -688,6 +714,18 @@
 
 @misc
 {
+	web_boost_geometry,
+	title = {{Boost.Geometry, part of the Boost C++ Libraries \cite{web_boost} (Software)}},
+	author = {Barend Gehrels and Bruno Lalande and Mateusz Loskot and Adam Wulkiewicz and Menelaos Karavelas and Vissarion Fisikopoulos},
+	year = {2009-2021},
+	url = "https://www.boost.org/doc/libs/1_76_0/libs/geometry/doc/html/index.html",
+	OPThowpublished = "\url{https://www.boost.org/doc/libs/1_76_0/libs/geometry/doc/html/index.html}",
+	note = "[Online; accessed 13-August-2021]",
+}
+
+
+@misc
+{
 	web_boost_signals,
 	title = {{Boost.Signals2, part of the Boost C++ Libraries \cite{web_boost} (Software)}},
 	author = {Douglas Gregor and Frank Mori Hess},
@@ -836,8 +874,8 @@
 	title = {{OpenGL (Software}},
 	author = {{Khronos Group, Beaverton, OR, USA}},
 	year = {2021},
-	url = "https://www.opengl.org//",
-	OPThowpublished = "\url{https://www.opengl.org//}",
+	url = "https://www.opengl.org/",
+	OPThowpublished = "\url{https://www.opengl.org/}",
 	note = "[Online; accessed 31-July-2021]",
 }
 
