--- a/tex/xtal.tex
+++ b/tex/xtal.tex
@@ -292,3 +292,7 @@ With that, Eq. \ref{eq:xi} simplifies to:
 	\xi \ =\  \sigma_{\mathrm{side}} \cdot \arccos \left( \frac{ Q_i a^i }{ \sqrt{Q_i Q^i} \sqrt{a_i a^i} } \right).
 \end{equation}
 % ------------------------------------------------------------------------------------------------------------------------------------
+
+
+\section{Summary}
+TODO
